修改offer cap默认值，官网页面样式修改

--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -17,7 +17,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/style.css?v=20170815a">
+    <link rel="stylesheet" href="css/plyr.css">
+    <link rel="stylesheet" href="css/share.min.css">
+    <link rel="stylesheet" href="css/style.css?v=20170831a">
 </head>
 
 <body>
@@ -122,6 +124,25 @@
     </div>
   </section>
 </div>
+<section class="container">
+  <div class="row">
+    <div class="col-md-8">
+      <div data-type="youtube" data-video-id="5jP3Ulk4nqc" poster="./img/banner-02.png"></div>
+    </div>
+    <div class="col-md-4">
+      <div class="backers-box">
+        <div class="total-price"><span>$6,131</span></div>
+        <div style="margin-bottom: 40px;">
+          <h3>168</h3>
+          <span>backers</span>
+        </div>
+        <button class="plan-btn" style="height: 48px;line-height48px;font-size:16px;width: 100%;margin-bottom: 15px;" data-toggle="modal" data-target="#myModal">Back our project</button>
+        <p class="text-center" style="margin-bottom: 10px;font-size: 26px;padding-top: 24px;">or <b>Share</b></p>
+        <div id="share-box" class="share-box text-center" data-sites="facebook, twitter, google"></div>
+      </div>
+    </div>
+  </div>
+</section>
 <section id="pricing">
     <div class="container" id="pricing2">
         <div class="pricing-box clearfix">
@@ -130,7 +151,7 @@
                 <li class="pricing-free">
                     <div class="pricing-free-title">
                         <b class="free-b">free</b>
-                        <h2>Free Plan<small>(Forever)</small></h2>
+                        <h2>Early bird tickets</h2>
                     </div>
                     <div class="pricing-plan">
                       <div class="p-header p-header2">
@@ -199,13 +220,13 @@
                         <small class="money-small">/Mon</small>
                       </div>
                         <ol>
-                            <li><i class="icon-ok"></i>1000000 included events</li>
-                            <li><i class="icon-ok"></i>0.049/1000 overage charge</li>
-                            <li><i class="icon-ok"></i>Skype Support 24/7</li>
-                            <li><i class="icon-ok"></i>6 month data retention</li>
-                            <li><i class="icon-ok"></i>5 custom tracking domains</li>
-                            <li><i class="icon-ok"></i>1 additional user</li>
-                            <li><i class="icon-ok"></i>10%volume discount</li>
+                            <li><i class="icon-ok"></i><div>1000000 included events</div></li>
+                            <li><i class="icon-ok"></i><div>0.049/1000 overage charge</div></li>
+                            <li><i class="icon-ok"></i><div>Skype Support 24/7</div></li>
+                            <li><i class="icon-ok"></i><div>6 month data retention</div></li>
+                            <li><i class="icon-ok"></i><div>5 custom tracking domains</div></li>
+                            <li><i class="icon-ok"></i><div>1 additional user</div></li>
+                            <li><i class="icon-ok"></i><div>10%volume discount</div></li>
                         </ol>
                         <a href="http://panel.newbidder.com/#/access/signup">
                             <button class="plan-btn">Contact Us<i class="icon-arrow-right"></i></button>
@@ -229,13 +250,13 @@
                           <small class="money-small">/Mon</small>
                         </div>
                         <ol>
-                            <li><i class="icon-ok"></i>10000000 included events</li>
-                            <li><i class="icon-ok"></i>0.02/1000 overage charge</li>
-                            <li><i class="icon-ok"></i>Skype Support 24/7</li>
-                            <li><i class="icon-ok"></i>1 year data retention</li>
-                            <li><i class="icon-ok"></i>10 custom tracking domains</li>
-                            <li><i class="icon-ok"></i>2 additional users</li>
-                            <li><i class="icon-ok"></i>15%volume discount</li>
+                            <li><i class="icon-ok"></i><div>10000000 included events</div></li>
+                            <li><i class="icon-ok"></i><div>0.02/1000 overage charge</div></li>
+                            <li><i class="icon-ok"></i><div>Skype Support 24/7</div></li>
+                            <li><i class="icon-ok"></i><div>1 year data retention</div></li>
+                            <li><i class="icon-ok"></i><div>10 custom tracking domains</div></li>
+                            <li><i class="icon-ok"></i><div>2 additional users</div></li>
+                            <li><i class="icon-ok"></i><div>15%volume discount</div></li>
                         </ol>
                         <a href="http://panel.newbidder.com/#/access/signup">
                             <button class="plan-btn">Contact Us<i class="icon-arrow-right"></i></button>
@@ -259,13 +280,13 @@
                         <small class="money-small">/Mon</small>
                       </div>
                         <ol>
-                            <li><i class="icon-ok"></i>30000000 included events</li>
-                            <li><i class="icon-ok"></i>0.017/1000 overage charge</li>
-                            <li><i class="icon-ok"></i>Skype Support 24/7</li>
-                            <li><i class="icon-ok"></i>2 year data retention</li>
-                            <li><i class="icon-ok"></i>30 custom tracking domains</li>
-                            <li><i class="icon-ok"></i>5 additional users</li>
-                            <li><i class="icon-ok"></i>20%volume discount</li>
+                            <li><i class="icon-ok"></i><div>30000000 included events</div></li>
+                            <li><i class="icon-ok"></i><div>0.017/1000 overage charge</div></li>
+                            <li><i class="icon-ok"></i><div>Skype Support 24/7</div></li>
+                            <li><i class="icon-ok"></i><div>2 year data retention</div></li>
+                            <li><i class="icon-ok"></i><div>30 custom tracking domains</div></li>
+                            <li><i class="icon-ok"></i><div>5 additional users</div></li>
+                            <li><i class="icon-ok"></i><div>20%volume discount</div></li>
                         </ol>
                         <a href="http://panel.newbidder.com/#/access/signup">
                             <button class="plan-btn">Contact Us<i class="icon-arrow-right"></i></button>
@@ -541,6 +562,38 @@
         </div>
     </div>
 </footer>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog add-funds-dialog" role="document" style="z-index: 1050;">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Add Funds</h4>
+      </div>
+      <div class="modal-body">
+        <h3>Payment method</h3>
+        <p>We strongly recommend you to make the payment in US dollars. If you make the transaction in other currency, you will take the risk of getting lose because of the exchange rate.</p>
+        <h4>1. PayPal</h4>
+        <p style="color: red;">zhengshuo@adbund.com</p>
+        <p>If you want to use PayPal balance to make the payment, the transaction fee 1.5%+0.3USD. Please notice that to use Paypal balance, you will need to add funds to your Paypal account first.</p>
+        <h4>2. Alipay</h4>
+        <p style="color: red;">zhengshuo@adbund.com</p>
+        <h4>3. Wire transfer</h4>
+        <p>Payee: ADBUND  LIMITED</p>
+        <p>Payee Address: Room 1501 15/F .,SPA Center 53-55 Lockhart Road,wanchai HongKong</p>
+        <p>Benificary Bank: China Merchants Bank, Head Office, Shenzhen, P.R.China</p>
+        <p>Benificary Bank Address: 19/F., China Merchants Bank Tower, No. 7088 Shennan Boulevard, Shenzhen, P.R.China</p>
+        <p>USD Savings Account OSA121923800832801</p>
+        <p>HKD Savings Account OSA121923800821601</p>
+        <p>SWIFT: CMBCCNBS</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 <script src="js/jquery-2.1.1.min.js" type="text/javascript">
     function onSuccess(data){}
@@ -573,7 +626,11 @@
 
 <script type="text/javascript" src="js/jquery.easing.min.js"></script>
 <script type="text/javascript" src="js/jquery.lavalamp.min.js"></script>
+<script type="text/javascript" src="js/plyr.js"></script>
+<script type="text/javascript" src="js/jquery.share.min.js"></script>
 <script type="text/javascript">
+  plyr.setup();
+  $('#share-box').share();
   $(function() {
     var p = 0;
     setInterval(function() {
