添加review link跳转地址

--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -109,7 +109,7 @@
         <h4>Sincerely appreciate your support, we are now having a promotion which you can get your free account or you will be charged starting from September according to below 4 ways, they are:</h4>
         <p><i>1. </i><span>Bought or buying traffic through Newbidder Mdsp</span></p>
         <p><i>2. </i><span>Writie an review of Newbidder TRK and post it on relevant forums like STM, Affiliatefix, Blackhatworld etc., remember to make a screenshot and mail to <a class="review-link" href="mailto:support@newbidder.com">support@newbidder.com</a>, after comfirmation we will activate your free account</span></p>
-        <p><i>3. </i><span>Share the review link on your social accounts, such like Facebook, Twitter, Wechat moments, Line etc., remember to make a screenshot and mail to <a class="review-link" href="mailto:support@newbidder.com">support@newbidder.com</a>, after comfirmation we will activate your free account</span></p>
+        <p><i>3. </i><span>Share the <a style="color: #2770ea;" href="http://www.newbidder.com/campaign.html" target="_blank">review link</a> on your social accounts, such like Facebook, Twitter, Wechat moments, Line etc., remember to make a screenshot and mail to <a class="review-link" href="mailto:support@newbidder.com">support@newbidder.com</a>, after comfirmation we will activate your free account</span></p>
         <p><i>4. </i><span>Succeed to refer an friend to register Newbidder TRK and make an subscription or execute one of the 4 ways to get the free account.</span></p>
       </div>
       <div class="col-md-6 mdsp-msg">
