--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -107,10 +107,10 @@
       <div class="col-md-6 free-box">
         <h3 style="margin-bottom: 20px;height: 49px;"><img src="img/trk_logo.png"></h3>
         <h4>Sincerely appreciate your support, we are now having a promotion which you can get your free account or you will be charged starting from September according to below 4 ways, they are:</h4>
-        <p><i>1. </i><span>Bought or buying traffic through Newbidder Mdsp</span></p>
-        <p><i>2. </i><span>Writie an review of Newbidder TRK and post it on relevant forums like STM, Affiliatefix, Blackhatworld etc., remember to make a screenshot and mail to <a class="review-link" href="mailto:support@newbidder.com">support@newbidder.com</a>, after comfirmation we will activate your free account</span></p>
-        <p><i>3. </i><span>Share the <a style="color: #2770ea;" href="http://www.newbidder.com/campaign.html" target="_blank">review link</a> on your social accounts, such like Facebook, Twitter, Wechat moments, Line etc., remember to make a screenshot and mail to <a class="review-link" href="mailto:support@newbidder.com">support@newbidder.com</a>, after comfirmation we will activate your free account</span></p>
-        <p><i>4. </i><span>Succeed to refer an friend to register Newbidder TRK and make an subscription or execute one of the 4 ways to get the free account.</span></p>
+        <p><i>1. </i><span>Bought or buying traffic through Newbidder mDSP;</span></p>
+        <p><i>2. </i><span>Write an review of Newbidder TRK and post it on relevant forums, such like STM, Affiliatefix, Blackhatworld etc., please remember to feedback your review link with sign-in account on Newbidder TRK and mail to <a class="review-link" href="mailto:support@newbidder.com">support@newbidder.com</a>, after confirmation we will activate your free account;</span></p>
+        <p><i>3. </i><span>Share the <a style="color: #2770ea;" href="http://www.newbidder.com/campaign.html" target="_blank">review link</a> on your social accounts, such like Facebook, Twitter, Wechat moments, Line etc., please remember to feedback your review link with sign-in account on Newbidder TRK and mail to <a class="review-link" href="mailto:support@newbidder.com">support@newbidder.com</a>, after comfirmation we will activate your free account</span></p>
+        <p><i>4. </i><span>Succeed to refer a friend to register Newbidder TRK and make subscription or execute one of the 4 ways to get free account.</span></p>
       </div>
       <div class="col-md-6 mdsp-msg">
         <h3 style="margin-bottom: 20px;height: 49px;"><img src="http://cdn.avazutracking.net/images/201708/056/a26f7e3990cf4ac3abbbb034b7f17d60_277x49.png"></h3>
