--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="../bower_components/selectize/dist/css/selectize.bootstrap3.css"/>
     <link rel="stylesheet" href="../bower_components/jQuery-contextMenu/dist/jquery.contextMenu.min.css"/>
     <link rel="stylesheet" href="assets/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../bower_components/bootstrap-daterangepicker/daterangepicker.css"/>
     <link rel="stylesheet" href="assets/css/s-fonts.css"/>
     <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="assets/css/material-icons.css"/>
@@ -76,6 +77,8 @@
 <script src="../bower_components/angular-vs-repeat/src/angular-vs-repeat.min.js"></script>
 <script src="../bower_components/jQuery-contextMenu/dist/jquery.contextMenu.min.js"></script>
 <script src="../bower_components/jQuery-contextMenu/dist/jquery.ui.position.min.js"></script>
+<script src="../bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+<script src="../bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
 <script src="js/temp.js"></script>
 
 <!-- App -->
